@@ -31,6 +31,7 @@ class TinyMCE {
             'button_tile_map' => false,
             'cleanup' => false,
             'compressor' => '',
+            'content_css' => $this->modx->getOption('editor_css_path'),
             'convert_fonts_to_spans' => true,
             'convert_newlines_to_brs' => false,
             'core_path' => $corePath,
@@ -54,11 +55,12 @@ class TinyMCE {
             'remove_line_breaks' => false,
             'resource_browser_path' => $this->modx->getOption('manager_url').'controllers/browser/index.php?',
             'theme_advanced_blockformats' => 'p,h1,h2,h3,h4,h5,h6,div,blockquote,code,pre,address',
+            'theme_advanced_disable' => '',
             'theme_advanced_resizing' => false,
             'theme_advanced_resize_horizontal' => false,
             'theme_advanced_statusbar_location' => 'bottom',
+            'theme_advanced_styles' => $this->modx->getOption('tiny.css_selectors',null,''),
             'theme_advanced_toolbar_align' => 'left',
-            'theme_advanced_disable' => '',
             'theme_advanced_toolbar_location' => 'top',
             'width' => '100%',
         ),$config);
